--- a/website/demo/src/components/Home/Home.less
+++ b/website/demo/src/components/Home/Home.less
@@ -10,7 +10,9 @@
   line-height: 24px;
   bottom: 10px;
 }
-
+.ant-layout-sider-children {
+  width: auto;
+}
 .logo {
   height: 96px;
   width: 96px;
